Complete header html and css basic structure
aggiunta nav

--- a/index.html
+++ b/index.html
@@ -13,8 +13,41 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <header class="site_header"></header>
+  <body class="debug">
+    <header class="site_header">
+      <div class="logo">lorem</div>
+      <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">lorem</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >lorem</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">lorem</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active">lorem</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- /.site_header -->
     <main class="site_main"></main>
     <!-- /.site_main -->
