Complete hero image basic structure

--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
       </nav>
     </header>
     <!-- /.site_header -->
-    <main class="site_main"></main>
+    <main class="site_main">
+      <section class="jumbo position-relative">
+        <img class="w-100" src="./img/jumbo-bg.png" alt="" />
+        <div class="container position-absolute top-50 start-0 text-white">
+          <h1>lorem</h1>
+          <p class="w-25">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis
+            saepe recusandae eaque omnis rerum architecto quaerat. Facere
+            recusandae perferendis doloribus, atque est tenetur magnam corporis
+            molestiae beatae labore libero fugit veritatis impedit maiores
+            numquam cupiditate architecto praesentium alias quaerat, iusto
+            commodi. Earum, incidunt nobis? Obcaecati voluptates similique
+            suscipit voluptatibus repellendus?
+          </p>
+        </div>
+      </section>
+      <!-- /.jumbo -->
+    </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
     <!-- /.site_footer -->
