add cards section console

--- a/index.html
+++ b/index.html
@@ -51,21 +51,66 @@
     <!-- /.site_header -->
     <main class="site_main">
       <section class="jumbo position-relative">
-        <img class="w-100" src="./img/jumbo-bg.png" alt="" />
-        <div class="container position-absolute top-50 start-0 text-white">
-          <h1>lorem</h1>
-          <p class="w-25">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis
-            saepe recusandae eaque omnis rerum architecto quaerat. Facere
-            recusandae perferendis doloribus, atque est tenetur magnam corporis
-            molestiae beatae labore libero fugit veritatis impedit maiores
-            numquam cupiditate architecto praesentium alias quaerat, iusto
-            commodi. Earum, incidunt nobis? Obcaecati voluptates similique
-            suscipit voluptatibus repellendus?
-          </p>
+        <img class="w-100 jumbo_img" src="./img/jumbo-bg.png" alt="" />
+        <div class="text-white container position-absolute top-50 start-0">
+            <img class="returnal" src="./img/returnal-hero-banner-logo.png" alt="">
+            <h1>lorem</h1>
+            <div class="row">
+                <div class="col-12 col-xxl-6">
+                    <p class="">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Debitis saepe recusandae eaque omnis rerum architecto quaerat.
+                Facere recusandae perferendis doloribus, atque est tenetur
+                magnam corporis molestiae beatae labore libero fugit veritatis
+                impedit maiores numquam cupiditate architecto praesentium alias
+                quaerat, iusto commodi. Earum, incidunt nobis? Obcaecati
+                voluptates similique suscipit voluptatibus repellendus?
+              </p>
+                </div>
+            </div>
+            
+            </div>
+          </div>
         </div>
       </section>
       <!-- /.jumbo -->
+      <section class="console py-5">
+          <div class="container-fluid">
+              <div class="row">
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
+      </section>
+      <!-- /.cards -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
