Complete section console basic structure
aggiunte row-cols-5

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="returnal" src="./img/returnal-hero-banner-logo.png" alt="">
             <h1>lorem</h1>
             <div class="row">
-                <div class="col-12 col-xxl-6">
+                <div class="col-12 col-lg-6">
                     <p class="">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Debitis saepe recusandae eaque omnis rerum architecto quaerat.
@@ -68,7 +68,6 @@
               </p>
                 </div>
             </div>
-            
             </div>
           </div>
         </div>
@@ -108,7 +107,29 @@
                     </div>
                 </div>
             </div>
-          </div>
+            <div class="console_text text-center">
+                <p>Lorem</p>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, exercitationem?</p>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-12 col-md-6">
+                    <h2>lorem</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
+                    <button>lorem lorem</button>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img class="w-100" src="./img/playstation-5-thumb.png" alt="">
+                </div>
+            </div>
+                <div class="row row-cols-3 row-cols-md-5">
+                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                </div>
+
       </section>
       <!-- /.cards -->
     </main>
