Complete section adventure

--- a/index.html
+++ b/index.html
@@ -131,7 +131,31 @@
                 </div>
 
       </section>
-      <!-- /.cards -->
+      <!-- /.console -->
+      <section class="adventure position-relative">
+        <img class="w-100 jumbo_img" src="./img/it-takes-two-hero-banner-desktop.jpg" alt="" />
+        <div class="text-white container-fluid position-absolute start-0 top-0">
+            <img class="logo_takes my-5" src="./img/it-takes-two-logo.png" alt="">
+            <h1 class="w-25 mb-5">Un'avventura cooperativa selvaggia ti attende</h1>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <p class="w-50">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Debitis saepe recusandae eaque omnis rerum architecto quaerat.
+                Facere recusandae perferendis doloribus, atque est tenetur
+                magnam corporis molestiae beatae labore libero fugit veritatis
+                impedit maiores numquam cupiditate architecto praesentium alias
+                quaerat, iusto commodi. Earum, incidunt nobis? Obcaecati
+                voluptates similique suscipit voluptatibus repellendus?
+              </p>
+                </div>
+            </div>
+            <button class="btn btn-primary my-5">Acquista ora</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /.jumbo -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
