--- a/index.html
+++ b/index.html
@@ -155,7 +155,80 @@
           </div>
         </div>
       </section>
-      <!-- /.jumbo -->
+      <!-- /.adventure -->
+      <section class="new_games py-5 text-white">
+          <div class="container-fluid">
+              <h2>Nuove uscite</h2>
+              <h4>lorem lorem PS4 e PS5 lorem lorem</h4>
+              <div class="row">
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
+           
+
+      </section>
+      <!-- /.console -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
