Complete section explore basic structure

--- a/index.html
+++ b/index.html
@@ -228,7 +228,37 @@
            
 
       </section>
-      <!-- /.console -->
+      <!-- /.new games -->
+      <section class="explore py-5">
+          <div class="container-fluid">
+              <div class="text-center m-auto w-50">
+                  <h2>Esplora PlayStation 4</h2>
+                  <p class="text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem eos, beatae sed ad voluptas in nemo dolorum enim? Quas?</p>
+              </div>
+              <div class="row">
+                  <div class="col-sm-12 pb-3 col-md-4">
+                       <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                       <h5>Lorem</h5>
+                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
+                       <button class="btn btn-primary">Scopri di più</button>
+                  </div>
+                  <div class="col-sm-12 pb-3 col-md-4">
+                       <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                       <h5>Lorem</h5>
+                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
+                       <button class="btn btn-primary">Scopri di più</button>
+                  </div>
+                  <div class="col-sm-12 pb-3 col-md-4">
+                       <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                       <h5>Lorem</h5>
+                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
+                       <button class="btn btn-primary">Scopri di più</button>
+                  </div>
+                
+            </div>
+        </div>
+      </section>
+      <!-- /.new games -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
