Complete section plus basic structure

--- a/index.html
+++ b/index.html
@@ -258,7 +258,23 @@
             </div>
         </div>
       </section>
-      <!-- /.new games -->
+      <!-- /.explore -->
+      <div class="plus">
+          <div class="container">
+             <div class="row justify-content-center align-items-center">
+                <div class="col-12 col-md-6">
+                    <img class="" height="100" src="./img/ps-plus-logo.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
+                    <button>lorem lorem</button>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                </div>
+            </div>
+                
+            </div>
+      </div>
+      <!-- /.plus -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
