Complete section now basic structure

--- a/index.html
+++ b/index.html
@@ -299,6 +299,21 @@
         </div>
       </section>
       <!-- /.discount -->
+      <div class="now">
+          <div class="container">
+             <div class="row justify-content-center align-items-center">
+                <div class="col-12 col-md-6">
+                    <img class="" height="100" src="./img/ps-now-logo-two-column.png" alt="">
+                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
+                    <button>lorem lorem</button>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="">
+                </div>
+            </div>
+            </div>
+      </div>
+       <!-- /.now -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
