--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
             </div>
       </div>
        <!-- /.now -->
+       <section class="social py-5">
+          <div class="container">
+              <div class="text-center">
+                  <h2>Seguici sui social media</h2>
+              </div>
+              <div class="row row-cols-2 row-cols-md-4 g-5">
+                <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
+               <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
+               <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
+                <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
+              </div>
+        </div>
+      </section>
+      <!-- /.social -->
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
