--- a/index.html
+++ b/index.html
@@ -330,7 +330,54 @@
       <!-- /.social -->
     </main>
     <!-- /.site_main -->
-    <footer class="site_footer"></footer>
+    <footer class="site_footer py-5">
+      <div class="container">
+        <div class="footer_logo row text-white">
+          <div class="col-12 col-lg-6">
+            <img src="./img/play_logo.svg" alt="">
+            <p>Contry / Region: Italy</p>
+          </div>
+          <div class="col-12 col-lg-6 d-md-flex d-lg-flex">
+            <div class="col-6 col-md-4 col-lg-4">
+              <ul>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+              </ul>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+              <ul>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+              </ul>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+               <ul>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+                <li>Link footer n</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <img height="50;" src="./img/sie-logo.svg" alt="">
+            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, nostrum perferendis aperiam totam non dolorem molestiae nesciunt, consequuntur, natus fugiat illo labore obcaecati accusantium? Asperiores nesciunt voluptates voluptas perferendis harum suscipit cum animi nam qui impedit. Libero consequatur non enim distinctio quasi numquam est! Laboriosam commodi perferendis ab inventore consectetur!</p>
+  
+          </div>
+        </div>
+
+      </div>
+
+    </footer>
     <!-- /.site_footer -->
   </body>
 </html>
