Complete jumbo details
css and responsive

--- a/index.html
+++ b/index.html
@@ -79,24 +79,58 @@
     </header>
     <!-- /.site_header -->
     <main class="site_main">
-      <section class="jumbo position-relative">
-        <img class="w-100 jumbo_img" src="./img/jumbo-bg.png" alt="" />
-        <div class="text-white container position-absolute top-50 start-0">
-            <img class="returnal" src="./img/returnal-hero-banner-logo.png" alt="">
-            <h1>lorem</h1>
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <p class="">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Debitis saepe recusandae eaque omnis rerum architecto quaerat.
-                Facere recusandae perferendis doloribus, atque est tenetur
-                magnam corporis molestiae beatae labore libero fugit veritatis
-                impedit maiores numquam cupiditate architecto praesentium alias
-                quaerat, iusto commodi. Earum, incidunt nobis? Obcaecati
-                voluptates similique suscipit voluptatibus repellendus?
-              </p>
+      <section class="jumbo">
+        <div class="main_jumbo bg_jumbo">
+          <div class="text-white container d-flex pt_6 ">
+              <div class="row flex-column g-4">
+                <div class="col-7 col-md-7 col-lg-3">
+                  <img class="w-100" src="./img/returnal-hero-banner-logo.png" alt="">
                 </div>
-            </div>
+                <div class="col-12 col-lg-6">
+                   <h1>Rompi il cerchio</h1>
+                </div>
+                <div class="col-12 col-lg-5">
+                    <p class="">
+               Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
+              </p>
+              </div>
+             <div class="my-5">
+                <button class="btn btn_red rounded-pill">Acquista ora</button>
+              </div>
+                </div>
+          </div>
+        </div>
+        <div class="container py-4">
+          <div class="row">
+              <div class="col-6 pb-3 col-md-4 col-lg-2 ">
+                 <div class="card_only">
+                   <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                 </div>
+              </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+               <div class="card border-0">
+                 <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+               </div>
+              </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+                <div class="card border-0">
+                  <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+               <div class="card border-0">
+                 <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+               </div>
+             </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+                 <div class="card border-0">
+                   <img class="w-100 rounded_3" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                 </div>
+              </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+                 <div class="card border-0">
+                   <img class="w-100 rounded_3" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                 </div>
             </div>
           </div>
         </div>
@@ -104,38 +138,6 @@
       <!-- /.jumbo -->
       <section class="console py-5">
           <div class="container-fluid">
-              <div class="row">
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
-                </div>
-            </div>
             <div class="console_text text-center">
                 <p>Lorem</p>
                 <h2>Lorem</h2>
