Complete section console details
css and responsive

--- a/index.html
+++ b/index.html
@@ -137,30 +137,44 @@
       </section>
       <!-- /.jumbo -->
       <section class="console py-5">
-          <div class="container-fluid">
-            <div class="console_text text-center">
-                <p>Lorem</p>
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, exercitationem?</p>
+          <div class="container">
+            <div class="console_text text-center ">
+                <p class="text-uppercase text_blue mb-0 fw-bold">play has no limits</p>
+                <h2 class="mb-4 fw-bold display-6">Ecco la PlayStation 5</h2>
+                <p class="fw-bold text-muted">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </div>
             <div class="row justify-content-center align-items-center">
                 <div class="col-12 col-md-6">
-                    <h2>lorem</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
-                    <button>lorem lorem</button>
+                    <h2 class="mb-4 fw-bold display-6">Console PlayStation 5</h2>
+                    <p class="fw-bold text-muted">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                    <button class="btn btn-primary rounded-pill">Maggiori informazioni</button>
                 </div>
                 <div class="col-12 col-md-6">
                     <img class="w-100" src="./img/playstation-5-thumb.png" alt="">
                 </div>
             </div>
                 <div class="row row-cols-3 row-cols-md-5">
-                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
-                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
-                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
-                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
-                    <div class="col"><img class="" height="150" src="./img/headset-thumb.png" alt=""></div>
+                    <div class="col border_b border-2 text-center">
+                      <img class="w-100" src="./img/playstation-5-thumb.png" alt="">
+                      <h6 class="mb-4">Console PS5</h6>
+                    </div>
+                    <div class="col text-center opacity-75">
+                      <img class="w-100" src="./img/joypad-thumb.png" alt="">
+                      <h6 class="lh-base">Controller wireless DualSense</h6>
+                    </div>
+                    <div class="col text-center opacity-75">
+                      <img class="w-100" src="./img/headset-thumb.png" alt="">
+                       <h6 class="lh-base">Cuffie wireless con microfono PULSE 3</h6>
+                    </div>
+                    <div class="col text-center opacity-75">
+                      <img class="w-100" src="./img/remote-thumb.png" alt="">
+                       <h6 class="">Telecomando Media</h6>
+                    </div>
+                    <div class="col text-center opacity-75">
+                      <img class="w-100" src="./img/camera-thumb.jpg" alt="">
+                       <h6 class="">Telecamera HD</h6>
+                    </div>
                 </div>
-
       </section>
       <!-- /.console -->
       <section class="adventure position-relative">
