Complete section adventure details
css and responsive

--- a/index.html
+++ b/index.html
@@ -177,25 +177,23 @@
                 </div>
       </section>
       <!-- /.console -->
-      <section class="adventure position-relative">
-        <img class="w-100 jumbo_img" src="./img/it-takes-two-hero-banner-desktop.jpg" alt="" />
-        <div class="text-white container-fluid position-absolute start-0 top-0">
-            <img class="logo_takes my-5" src="./img/it-takes-two-logo.png" alt="">
-            <h1 class="w-25 mb-5">Un'avventura cooperativa selvaggia ti attende</h1>
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <p class="w-50">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Debitis saepe recusandae eaque omnis rerum architecto quaerat.
-                Facere recusandae perferendis doloribus, atque est tenetur
-                magnam corporis molestiae beatae labore libero fugit veritatis
-                impedit maiores numquam cupiditate architecto praesentium alias
-                quaerat, iusto commodi. Earum, incidunt nobis? Obcaecati
-                voluptates similique suscipit voluptatibus repellendus?
-              </p>
-                </div>
+      <section class="adventure main_jumbo bg_adventure">
+        <div class="text-white container d-flex pt_7">
+            <div class="row flex-column g-5 g-md-5">
+            <div class="col-9 col-lg-3">
+              <img class="w-100" src="./img/it-takes-two-logo.png" alt="">
             </div>
-            <button class="btn btn-primary my-5">Acquista ora</button>
+            <div class="col-12 col-lg-5">
+               <h2 class="display-5">Un'avventura cooperativa selvaggia ti attende</h2>
+            </div>
+            <div class="col-12 col-lg-5">
+                <p class="">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in it Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
+                </p>
+          </div>
+          <div class="my-5">
+            <button class="btn btn_red rounded-pill">Acquista ora</button>
+          </div>
+            </div>
             </div>
           </div>
         </div>
