--- a/index.html
+++ b/index.html
@@ -200,71 +200,83 @@
       </section>
       <!-- /.adventure -->
       <section class="new_games py-5 text-white">
-          <div class="container-fluid">
+          <div class="container">
               <h2>Nuove uscite</h2>
-              <h4>lorem lorem PS4 e PS5 lorem lorem</h4>
+              <h4 class="lh-lg">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
               <div class="row">
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                     </div>
+                    <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
+                    <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
+                </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
+                    <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                     </div>
+                     <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
+                    <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
                 </div>
             </div>
-            <div class="row">
+           <div class="row">
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                     </div>
+                     <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
+                    <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
+                </div>
+              <div class="col-6 pb-3 col-md-4 col-lg-2">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                     <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
+                     <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                     </div>
+                    <h6 class="fw-bold pt-2">Tony Hawk's<span class="sigla_tm">TM</span> Pro Skater<span class="sigla_tm">TM</span> 1 + 2</span></h6>
                 </div>
                 <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <div class="card border-0">
+                    <img class="rounded_3" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                     </div>
-                </div>
-                <div class="col-6 pb-3 col-md-4 col-lg-2">
-                    <div class="card">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                    </div>
+                    <h6 class="fw-bold pt-2">Crash Bandicoot 4: Its <span class="test-wrap">About Time</span></h6>
                 </div>
             </div>
           </div>
