Fix section console and new games bug
aggiunta sigla TM

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                     </div>
                     <div class="col text-center opacity-75">
                       <img class="w-100" src="./img/joypad-thumb.png" alt="">
-                      <h6 class="lh-base">Controller wireless DualSense</h6>
+                      <h6 class="lh-base">Controller wireless DualSense<span class="sigla_tm">TM</span></h6>
                     </div>
                     <div class="col text-center opacity-75">
                       <img class="w-100" src="./img/headset-thumb.png" alt="">
-                       <h6 class="lh-base">Cuffie wireless con microfono PULSE 3</h6>
+                       <h6 class="lh-base">Cuffie wireless con microfono PULSE 3<span class="sigla_tm">TM</span></h6>
                     </div>
                     <div class="col text-center opacity-75">
                       <img class="w-100" src="./img/remote-thumb.png" alt="">
