Complete section  explore details
css and responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body class="debug">
     <header class="site_header sticky-top">
@@ -285,29 +286,29 @@
       </section>
       <!-- /.new games -->
       <section class="explore py-5">
-          <div class="container-fluid">
+          <div class="container">
               <div class="text-center m-auto w-50">
-                  <h2>Esplora PlayStation 4</h2>
-                  <p class="text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem eos, beatae sed ad voluptas in nemo dolorum enim? Quas?</p>
+                  <h2 class="mb-4 fw-bold display-6">Esplora PlayStation<i class="far fa-registered"></i> 4</h2> 
+                    <p class="fw-bold text-muted">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
               </div>
               <div class="row">
                   <div class="col-sm-12 pb-3 col-md-4">
                        <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
-                       <h5>Lorem</h5>
-                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
-                       <button class="btn btn-primary">Scopri di più</button>
+                       <h5 class="display-6 ">PlayStation 4</h5>
+                        <p class="fw-bold text-muted">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
                   </div>
                   <div class="col-sm-12 pb-3 col-md-4">
-                       <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
-                       <h5>Lorem</h5>
-                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
-                       <button class="btn btn-primary">Scopri di più</button>
+                       <img class="w-100" src="./img/double11-202010-tw-psvr.jpg" alt="">
+                       <h5 class="display-6 ">PlayStation VR</h5>
+                        <p class="fw-bold text-muted">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
                   </div>
                   <div class="col-sm-12 pb-3 col-md-4">
-                       <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
-                       <h5>Lorem</h5>
-                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores consequatur tenetur tempora labore et at minus voluptatem dignissimos, maxime maiores.</p>
-                       <button class="btn btn-primary">Scopri di più</button>
+                       <img class="w-100" src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                       <h5 class="display-6 ">Accessori</h5>
+                        <p class="fw-bold text-muted">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                       <button class="btn btn-primary rounded-pill">Scopri di più</button>
                   </div>
                 
             </div>
