Complete section plus details
css and responsive

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
           <div class="container">
              <div class="row justify-content-center align-items-center">
                 <div class="col-12 col-md-6">
-                    <img class="" height="100" src="./img/ps-plus-logo.png" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
-                    <button>lorem lorem</button>
+                    <img class="" height="80" src="./img/ps-plus-logo.png" alt="">
+                    <p class="py-3 my-3 ">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                    <button class="btn btn-outline-primary rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Plus</button>
                 </div>
                 <div class="col-12 col-md-6">
                     <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
