--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
       <!-- /.plus -->
       <section class="discount py-5">
           <div class="container">
-              <div class="text-center">
-                  <h2>Nuovi Sconti sul PlayStation Store</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem eos, beatae sed ad voluptas in nemo dolorum enim? Quas?</p>
+              <div class="text-center py-5">
+                  <h2 class="mb-4 fw-bold display-6">Nuovi Sconti sul PlayStation Store</h2>
+                    <p class="fw-bold text-muted fs-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
               </div>
               <div class="row">
                   <div class="col-sm-12 pb-3 col-md-4">
