Complete section now details
css and responsive

--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
           <div class="container">
              <div class="row justify-content-center align-items-center">
                 <div class="col-12 col-md-6">
-                    <img class="" height="100" src="./img/ps-now-logo-two-column.png" alt="">
-                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odio?</p>
-                    <button>lorem lorem</button>
+                    <img class="" height="80;" src="./img/ps-now-logo-two-column.png" alt="">
+                   <p class="py-3 my-3 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                    <button class="btn btn-outline rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Now</button>
                 </div>
                 <div class="col-12 col-md-6">
                     <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="">
