--- a/index.html
+++ b/index.html
@@ -370,16 +370,16 @@
             </div>
       </div>
        <!-- /.now -->
-       <section class="social py-5">
-          <div class="container">
-              <div class="text-center">
-                  <h2>Seguici sui social media</h2>
+       <section class="social py_6">
+          <div class="container w-50 pb-5">
+              <div class="text-center pb_6">
+                  <h2 class="fw-bold">Seguici sui social media</h2>
               </div>
               <div class="row row-cols-2 row-cols-md-4 g-5">
                 <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
-               <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
-               <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
-                <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
+               <div class="col"><img class="w-100" src="./img/facebook.jpg" alt=""></div>
+               <div class="col"><img class="w-100" src="./img/instagram.jpg" alt=""></div>
+                <div class="col"><img class="w-100" src="./img/youtube.png" alt=""></div>
               </div>
         </div>
       </section>
