--- a/index.html
+++ b/index.html
@@ -390,12 +390,15 @@
       <div class="container">
         <div class="footer_logo row text-white">
           <div class="col-12 col-lg-6">
-            <img src="./img/play_logo.svg" alt="">
-            <p>Contry / Region: Italy</p>
+            <img src="./img/ps-footer.svg" height="80" alt="">
+          <div class="d-flex py-5">
+            <img src="./img/language-globe.svg" height="20" alt="">
+              <p class="mx-3">Country / Region: Italy</p>
+          </div>
           </div>
           <div class="col-12 col-lg-6 d-md-flex d-lg-flex">
             <div class="col-6 col-md-4 col-lg-4">
-              <ul>
+              <ul class="lh-lg">
                 <li>Link footer n</li>
                 <li>Link footer n</li>
                 <li>Link footer n</li>
@@ -404,7 +407,7 @@
               </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-4">
-              <ul>
+              <ul class="lh-lg">
                 <li>Link footer n</li>
                 <li>Link footer n</li>
                 <li>Link footer n</li>
@@ -415,7 +418,7 @@
               </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-4">
-               <ul>
+               <ul class="lh-lg">
                 <li>Link footer n</li>
                 <li>Link footer n</li>
                 <li>Link footer n</li>
@@ -427,12 +430,9 @@
           <div class="col-12 col-lg-6">
             <img height="50;" src="./img/sie-logo.svg" alt="">
             <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, nostrum perferendis aperiam totam non dolorem molestiae nesciunt, consequuntur, natus fugiat illo labore obcaecati accusantium? Asperiores nesciunt voluptates voluptas perferendis harum suscipit cum animi nam qui impedit. Libero consequatur non enim distinctio quasi numquam est! Laboriosam commodi perferendis ab inventore consectetur!</p>
-  
           </div>
         </div>
-
       </div>
-
     </footer>
     <!-- /.site_footer -->
   </body>
