--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
       <div class="plus">
           <div class="container">
              <div class="row justify-content-center align-items-center">
-                <div class="col-12 col-md-6">
-                    <img class="" height="80" src="./img/ps-plus-logo.png" alt="">
+                <div class="col-12 col-md-6 py-4">
+                    <img class="w-75" src="./img/ps-plus-logo.png" alt="">
                     <p class="py-3 my-3 ">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                     <button class="btn btn-outline-primary rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Plus</button>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="d-none d-sm-none d-md-block col-md-6 ">
                     <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                 </div>
             </div>
