--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
              <div class="row justify-content-center align-items-center">
                 <div class="col-12 col-md-6 py-4">
                     <img class="w-75" src="./img/ps-plus-logo.png" alt="">
-                    <p class="py-3 my-3 ">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                    <p class="py-3 my-3">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                     <button class="btn btn-outline-primary rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Plus</button>
                 </div>
                 <div class="d-none d-sm-none d-md-block col-md-6 ">
@@ -358,12 +358,12 @@
       <div class="now">
           <div class="container">
              <div class="row justify-content-center align-items-center">
-                <div class="col-12 col-md-6">
-                    <img class="" height="80;" src="./img/ps-now-logo-two-column.png" alt="">
+                <div class="col-12 col-md-6 py-4">
+                    <img class="w-75" src="./img/ps-now-logo-two-column.png" alt="">
                    <p class="py-3 my-3 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                     <button class="btn btn-outline rounded-pill border-0 btn_light fw-bold">Esplora PlayStation Now</button>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="d-none d-sm-none d-md-block col-md-6">
                     <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="">
                 </div>
             </div>
