Fix section explore bug
sistemato testo

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <!-- /.jumbo -->
       <section class="console py-5">
           <div class="container">
-            <div class="console_text text-center ">
+            <div class="console_text text-center pb-5">
                 <p class="text-uppercase text_blue mb-0 fw-bold">play has no limits</p>
                 <h2 class="mb-4 fw-bold display-6">Ecco la PlayStation 5</h2>
                 <p class="fw-bold text-muted">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
@@ -287,9 +287,10 @@
       <!-- /.new games -->
       <section class="explore py-5">
           <div class="container">
-              <div class="text-center m-auto w-50">
+              <div class="text-center m-auto">
                   <h2 class="mb-4 fw-bold display-6">Esplora PlayStation<i class="far fa-registered"></i> 4</h2> 
-                    <p class="fw-bold text-muted">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                    <p class="fw-bold text-muted lh-sm m-0">Giochi incredibili e intrattenimento senza fine.</p> 
+                    <p class="fw-bold text-muted lh-sm">Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
               </div>
               <div class="row">
                   <div class="col-sm-12 pb-3 col-md-4">
