--- a/index.html
+++ b/index.html
@@ -372,17 +372,15 @@
       </div>
        <!-- /.now -->
        <section class="social py_6">
-          <div class="container w-50 pb-5">
-              <div class="text-center pb_6">
-                  <h2 class="fw-bold">Seguici sui social media</h2>
-              </div>
-              <div class="row row-cols-2 row-cols-md-4 g-5">
+                  <h2 class="fw-bold text-center pb-5">Seguici sui social media</h2>
+              <div class="container w-50">
+              <div class="row row-cols-2 row-cols-md-4 g-3">
                 <div class="col"><img class="w-100" src="./img/twitter.jpg" alt=""></div>
                <div class="col"><img class="w-100" src="./img/facebook.jpg" alt=""></div>
                <div class="col"><img class="w-100" src="./img/instagram.jpg" alt=""></div>
                 <div class="col"><img class="w-100" src="./img/youtube.png" alt=""></div>
               </div>
-        </div>
+               </div>
       </section>
       <!-- /.social -->
     </main>
